[tool.poetry]
name = "hashstore"
version = "1.1.0"
description = "HashStore, a hash-based object store for data packages."
authors = ["Dou Mok <douming.mok@gmail.com>", "Matt Jones <gitcode@magisa.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pathlib = "^1.0.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pylint = "^2.17.4"
pg8000 = "^1.29.8"

[tool.poetry.scripts]
hashstore = "hashstore.hashstoreclient:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
